--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -1,14 +1,26 @@
 .p1 {
+	background-color: lightpink;
+	font-family: Verdana, DejaVu Sans, sans-serif;
 }
 
 .div2 {
+	color: blue;
+	font-size: 36px;
 }
 
 .p3 {
+	background-color: lightpink;
+	font-family: Verdana, DejaVu Sans, sans-serif;
+	font-size: 24px;
 }
 
 .div4 {
+	background-color: lightgreen;
+	font-size: 24px;
+	font-weight: bold;
 }
 
 .p5 {
+	background-color: lightpink;
+	font-family: Verdana, DejaVu Sans, sans-serif;
 }
