add color and background color for each element

--- a/foundations/03-grouping-selectors/style.css
+++ b/foundations/03-grouping-selectors/style.css
@@ -1,5 +1,9 @@
 .click-me-button {
+	background-color: black;
+	color: white;
 }
 
 .no-click-me-button {
+	background-color: yellow;
+	color: black;
 }
