--- a/foundations/03-grouping-selectors/style.css
+++ b/foundations/03-grouping-selectors/style.css
@@ -7,3 +7,8 @@
 	background-color: yellow;
 	color: black;
 }
+
+.button {
+	font-size: 28px;
+	font-family: Helvetica, "Times New Roman", Times, serif sans-serif;
+}
