--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -2,6 +2,11 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
 }
 
+.para,
+.small-para {
+	color: hsl(0, 0%, 0%);
+	font-weight: 800;
+}
 .small-para {
 	font-size: 14px;
 	font-weight: 800;
