--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,25 +1,30 @@
-.header  {
-  font-family: monospace;
-  background: papayawhip;
+.header {
+	font-family: monospace;
+	background: papayawhip;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	flex-wrap: wrap;
 }
 
 .logo {
-  font-size: 48px;
-  font-weight: 900;
-  color: tomato;
-  background: white;
-  padding: 4px 32px;
+	font-size: 48px;
+	font-weight: 900;
+	color: tomato;
+	background: white;
+	padding: 4px 32px;
 }
 
 ul {
-  /* this removes the dots on the list items*/
-  list-style-type: none;
+	/* this removes the dots on the list items*/
+	display: flex;
+	justify-content: space-between;
+	gap: 10px;
+	list-style-type: none;
 }
 
 a {
-  font-size: 22px;
-  background: white;
-  padding: 8px;
-  /* this removes the line under the links */
-  text-decoration: none;
+	font-size: 22px;
+	background: white;
+	text-decoration: none;
 }
